Bug 335878 - Autostarted applications are run twice
Summary: Autostarted applications are run twice
Status: RESOLVED FIXED
Alias: None
Product: ksmserver
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-06 12:33 UTC by Antonio Rojas
Modified: 2014-08-19 22:17 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2014-06-06 12:33:50 UTC
Applications added to the autostart list are run twice at startup

Reproducible: Always

Steps to Reproduce:
1. Add ann application that supports multiple instances to autostart
2. Restart
Actual Results:  
Two instances are run

Expected Results:  
Only one instance is run
Comment 1 Aleix Pol 2014-07-03 00:14:05 UTC
Git commit 68b27ba6abbce9c8f03a94a065c32d54b13a8c8c by Aleix Pol, on behalf of Vishesh Handa.
Committed on 02/07/2014 at 17:14.
Pushed by apol into branch 'master'.

KSMServer: Do not autostart files

    KSMServer: Do not autostart files

    Currently KLauncher is responsible for starting all of the autostart
    files. It intelligently starts only the files which should be started in
    the KDE environment.

    Once this is done, KLauncher then decides to also start all the files
    in the autostart folder, but does that without checking which should be
    started. I'm not sure why both KSMServer and KLauncher are overlaping
    and doing the same thing. But it seems that KLauncher is the correct
    place to do this. Specially since ksmserver uses kioclient5 in order to
    start the applications.

REVIEW: 118977

commit 9529b6d513b73d421c3ac7c81909bf638a4e5817
Author: Vishesh Handa <me@vhanda.in>
Date:   Fri Jun 27 17:01:11 2014 +0200

    KSMServer: Do not autostart files

    Currently KLauncher is responsible for starting all of the autostart
    files. It intelligently starts only the files which should be started in
    the KDE environment.

    Once this is done, KLauncher then decides to also start all the files
    in the autostart folder, but does that without checking which should be
    started. I'm not sure why both KSMServer and KLauncher are overlaping
    and doing the same thing. But it seems that KLauncher is the correct
    place to do this. Specially since ksmserver uses kioclient5 in order to
    start the applications.

M  +0    -2    ksmserver/server.h
M  +3    -33   ksmserver/startup.cpp

http://commits.kde.org/plasma-workspace/68b27ba6abbce9c8f03a94a065c32d54b13a8c8c
Comment 2 Aleix Pol 2014-07-03 00:14:05 UTC
Git commit 68b27ba6abbce9c8f03a94a065c32d54b13a8c8c by Aleix Pol, on behalf of Vishesh Handa.
Committed on 02/07/2014 at 17:14.
Pushed by apol into branch 'master'.

KSMServer: Do not autostart files

    KSMServer: Do not autostart files

    Currently KLauncher is responsible for starting all of the autostart
    files. It intelligently starts only the files which should be started in
    the KDE environment.

    Once this is done, KLauncher then decides to also start all the files
    in the autostart folder, but does that without checking which should be
    started. I'm not sure why both KSMServer and KLauncher are overlaping
    and doing the same thing. But it seems that KLauncher is the correct
    place to do this. Specially since ksmserver uses kioclient5 in order to
    start the applications.

REVIEW: 118977

commit 9529b6d513b73d421c3ac7c81909bf638a4e5817
Author: Vishesh Handa <me@vhanda.in>
Date:   Fri Jun 27 17:01:11 2014 +0200

    KSMServer: Do not autostart files

    Currently KLauncher is responsible for starting all of the autostart
    files. It intelligently starts only the files which should be started in
    the KDE environment.

    Once this is done, KLauncher then decides to also start all the files
    in the autostart folder, but does that without checking which should be
    started. I'm not sure why both KSMServer and KLauncher are overlaping
    and doing the same thing. But it seems that KLauncher is the correct
    place to do this. Specially since ksmserver uses kioclient5 in order to
    start the applications.

M  +0    -2    ksmserver/server.h
M  +3    -33   ksmserver/startup.cpp

http://commits.kde.org/plasma-workspace/68b27ba6abbce9c8f03a94a065c32d54b13a8c8c
Comment 3 Aleix Pol 2014-07-03 00:14:06 UTC
Git commit 68b27ba6abbce9c8f03a94a065c32d54b13a8c8c by Aleix Pol, on behalf of Vishesh Handa.
Committed on 02/07/2014 at 17:14.
Pushed by apol into branch 'master'.

KSMServer: Do not autostart files

    KSMServer: Do not autostart files

    Currently KLauncher is responsible for starting all of the autostart
    files. It intelligently starts only the files which should be started in
    the KDE environment.

    Once this is done, KLauncher then decides to also start all the files
    in the autostart folder, but does that without checking which should be
    started. I'm not sure why both KSMServer and KLauncher are overlaping
    and doing the same thing. But it seems that KLauncher is the correct
    place to do this. Specially since ksmserver uses kioclient5 in order to
    start the applications.

REVIEW: 118977

commit 9529b6d513b73d421c3ac7c81909bf638a4e5817
Author: Vishesh Handa <me@vhanda.in>
Date:   Fri Jun 27 17:01:11 2014 +0200

    KSMServer: Do not autostart files

    Currently KLauncher is responsible for starting all of the autostart
    files. It intelligently starts only the files which should be started in
    the KDE environment.

    Once this is done, KLauncher then decides to also start all the files
    in the autostart folder, but does that without checking which should be
    started. I'm not sure why both KSMServer and KLauncher are overlaping
    and doing the same thing. But it seems that KLauncher is the correct
    place to do this. Specially since ksmserver uses kioclient5 in order to
    start the applications.

M  +0    -2    ksmserver/server.h
M  +3    -33   ksmserver/startup.cpp

http://commits.kde.org/plasma-workspace/68b27ba6abbce9c8f03a94a065c32d54b13a8c8c
Comment 4 Antonio Rojas 2014-07-03 19:16:02 UTC
This is still valid in a fresh git checkout (rev 9e761d3). Actually the patch doesn't seem to be applied?
Comment 5 Vishesh Handa 2014-07-04 10:01:24 UTC
Git commit f913e251fe66e22606c380a8cc0ddc8c69e3c07d by Vishesh Handa.
Committed on 03/07/2014 at 11:06.
Pushed by vhanda into branch 'master'.

KSMServer: Do not autostart files

Currently KLauncher is responsible for starting all of the autostart
files. It intelligently starts only the files which should be started in
the KDE environment.

Once this is done, KLauncher then decides to also start all the files
in the autostart folder, but does that without checking which should be
started. I'm not sure why both KSMServer and KLauncher are overlaping
and doing the same thing. But it seems that KLauncher is the correct
place to do this. Specially since ksmserver uses kioclient5 in order to
start the applications.
REVIEW: 118977

M  +0    -2    ksmserver/server.h
M  +3    -33   ksmserver/startup.cpp

http://commits.kde.org/plasma-workspace/f913e251fe66e22606c380a8cc0ddc8c69e3c07d